# axum

./: .dockerignore  .env  .env.docker  .env.example  .env.production  .env.test  .gitignore  APALIS_JOB_QUEUE.md  CACHING_STRATEGIES.md  CARGO_AUDIT_SUMMARY.md  CI-CD-FIXES.md  CI-CD-GUIDE.md  CI-CD-SUMMARY.md  Cargo.toml  Dockerfile  EMAIL_TROUBLESHOOTING.md  HTML_EMAIL_ENHANCEMENT.md  PORT_CONFIG.md  POSTGRES_FIX.md  README.md  SECURITY_AUDIT_REPORT.md  VPS-BUILD-UPDATE.md  audit.toml  docker-compose.prod.yml  docker-compose.yml  init.sql  nginx.conf  ratelimit_rust.rs  test_apalis_performance.sh  test_apalis_simple.sh  test_complete_auth.sh  test_html_email.sh  test_password_reset.sh  test_rate_limit.sh  test_smtp_connection.sh
.github/workflows/: ci-cd.yml
deploy/: setup-vps.sh
docs/: POSTGRES_UPGRADE.md  README.md
entity/: Cargo.toml
entity/src/: lib.rs  user.rs  users.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20250812_000001_alter_user_timestamps.rs  main.rs
migrations/: 20220101000001_create_users_table.up.sql
src/: lib.rs  main.rs  routes.rs
src/config/: database.rs  email.rs  mod.rs  redis.rs
src/controllers/: admin_controller.rs  auth.rs  auth_controller.rs  auth_controller_broken.rs  auth_controller_fixed.rs  auth_controller_old.rs  auth_controller_optimized.rs  mod.rs  user_controller.rs  users.rs
src/database/: users.rs
src/dtos/: auth_dto.rs
src/extractors/: json_extractor.rs
src/middlewares/: auth_middleware.rs
src/models/: user.rs
src/resources/: user_resource.rs
src/routes/: admin.rs  admin_route.rs  auth.rs  auth_route.rs  handlers.rs  mod.rs  samples.rs  users.rs
src/utils/: api_response.rs  auth.rs  cache.rs  constants.rs  email_service.rs  form_extractor.rs  job_queue.rs  mod.rs  query_params.rs  smart_cache.rs
src/views/: mod.rs  password_reset_success.html  response.rs
