[package]
name = "axum-template"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.4", features = ["multipart"] }
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["fs", "trace"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
dotenvy = "0.15.7"
once_cell = "1.21.3"
sea-orm = { version = "1.1.0", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
tower = "0.5.2"
