[workspace]
members = [".", "migration"]

[package]
name = "axum-template"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.4", features = ["multipart"] }
tokio = { version = "1.47.1", features = ["full"] }
redis = { version = "0.32.5", features = ["tokio-comp"] }
tower-http = { version = "0.6.6", features = ["fs", "trace"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.142"
dotenvy = "0.15.7"
once_cell = "1.21.3"
# Updated to latest stable version with only PostgreSQL features
sea-orm = { version = "1.1.14", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"], default-features = false }
tower = "0.5.2"
chrono = "0.4.41"
cuid2 = "0.1.4"

migration = { path = "./migration" }
validator = { version = "0.20.0", features = ["derive"] }
bcrypt = "0.17.0"
jsonwebtoken = "9.3.1"
rand = "0.9.2"
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder", "hostname"] }
apalis = { version = "0.7", features = ["limit", "prometheus", "retry"] }
apalis-redis = "0.7"
tera = "1.20"
